tests/frontend/fail/array/mapping_array_assignment.act
constructor of B
interface constructor()

creates

  mapping(uint => uint) m := [-1,-2]
